raw-kubernetes/resources/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: op4-kube-frontend
spec:
  selector:
    optional4: frontend
  ports:
    - name: web
      port: 80
      targetPort: web
