raw-kubernetes/resources/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: op4-kube-frontend
  name: frontend
  labels:
    optional4: frontend
spec:
  rules:
    - host: "application.cubix.localhost"
      http:
        paths:
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
